--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Store Build Output
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ matrix.triplet }}
+        name: ${{ env.VCPKG_DEFAULT_TRIPLET }}
         path: |
          ${{ github.workspace }}/bin
          ${{ github.workspace }}/build/vcpkg_installed/**/share
