--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -18,10 +18,10 @@ jobs:
         include:
           - os: windows-latest
             triplet_platform: windows-static # Windows static-release triplets have incorrect Run Time Linkage so just use static
-          - os: ubuntu-latest
+          - os: ubuntu-22.04
             triplet_platform: linux
         exclude:
-        - os: ubuntu-latest
+        - os: ubuntu-22.04
           arch: x86
         
     steps:
