--- a/shared-binary/CMakeLists.txt
+++ b/shared-binary/CMakeLists.txt
@@ -108,7 +108,7 @@ target_link_libraries(g_ar_toolkit PRIVATE
   opencv_imgcodecs
   opencv_dnn
   opencv_text
-  
+  opencv_videoio
   tinyobjloader::tinyobjloader
   apriltag::apriltag
   Eigen3::Eigen
