--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -12,6 +12,9 @@
     }
   ],
   "overlay-ports": [
-    "vcpkg-overlays"
+    "vcpkg-overlay-ports"
+  ],
+  "overlay-triplets":[
+    "vcpkg-overlay-triplets"
   ]
 }
