add ffmpeg flags

--- a/shared-binary/g_ar_toolkit_videoio/CMakeLists.txt
+++ b/shared-binary/g_ar_toolkit_videoio/CMakeLists.txt
@@ -13,6 +13,9 @@ generate_export_header(g_ar_toolkit_videoio)
 if(UNIX)
   # don't use "lib"-prefix on linux
   set_target_properties(g_ar_toolkit_videoio PROPERTIES PREFIX "")
+
+  # set linker flags for ffmpeg
+  target_link_options(g_ar_toolkit PRIVATE "-Wl,-Bsymbolic")
 endif()
 
 target_include_directories(g_ar_toolkit_videoio
