--- a/shared-binary/g_ar_toolkit_ar/CMakeLists.txt
+++ b/shared-binary/g_ar_toolkit_ar/CMakeLists.txt
@@ -5,7 +5,7 @@ include(GenerateExportHeader)
 find_package(tinyobjloader REQUIRED)
 
 # Find OpenCV
-find_package(OpenCV 4.11 REQUIRED calib3d)
+find_package(OpenCV 4.11 REQUIRED core calib3d)
 
 # specify shared-library target
 add_library(g_ar_toolkit_ar SHARED)
@@ -13,9 +13,7 @@ add_library(g_ar_toolkit_ar SHARED)
 generate_export_header(g_ar_toolkit_ar)
 
 # plaform specific definitions
-if(WIN32)
-
-elseif(UNIX)
+if(UNIX)
   # don't use "lib"-prefix on linux
   set_target_properties(g_ar_toolkit_ar PROPERTIES PREFIX "")
 endif()
@@ -26,16 +24,6 @@ target_include_directories(g_ar_toolkit_ar
   "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>"
 )
 
-# specify target properties
-# winrt only supports C++17 std
-set_property(TARGET g_ar_toolkit_ar PROPERTY CXX_STANDARD 17)
-set_target_properties(g_ar_toolkit_ar PROPERTIES
-  POSITION_INDEPENDENT_CODE ON
-  C_VISIBILITY_PRESET hidden
-  CXX_VISIBILITY_PRESET hidden
-  VISIBILITY_INLINES_HIDDEN ON
-  WINDOWS_EXPORT_ALL_SYMBOLS OFF
-)
 
 # Set the Library Filename to include the bitness
 math(EXPR BITNESS "8*${CMAKE_SIZEOF_VOID_P}")
