--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -30,8 +30,8 @@ jobs:
       uses: actions/cache/restore@v4
       with:
         path: ${{ github.workspace }}/vcpkg_cache
-        key: vcpkg-${{ env.VCPKG_DEFAULT_TRIPLET }}-${{ hashFiles('vcpkg*.json') }}
-        restore-keys: vcpkg-${{ env.VCPKG_DEFAULT_TRIPLET }}-
+        key: vcpkg-${{ matrix.arch }}-${{ matrix.triplet_platform}}-${{ hashFiles('vcpkg.json') }}
+        restore-keys: vcpkg-${{ matrix.arch }}-${{ matrix.triplet_platform}}-
 
     - uses: actions/checkout@v4
       with:
@@ -64,4 +64,4 @@ jobs:
       uses: actions/cache/save@v4
       with:
         path: ${{ github.workspace }}/vcpkg_cache
-        key: vcpkg-${{ env.VCPKG_DEFAULT_TRIPLET }}-${{ hashFiles('vcpkg*.json') }}
+        key: vcpkg-${{ matrix.arch }}-${{ matrix.triplet_platform}}-${{ hashFiles('vcpkg.json') }}
