--- a/shared-binary/g_ar_toolkit/CMakeLists.txt
+++ b/shared-binary/g_ar_toolkit/CMakeLists.txt
@@ -38,6 +38,7 @@ endif()
 
 target_link_libraries(g_ar_toolkit_core PUBLIC
   opencv_core
+  opencv_imgproc
   Eigen3::Eigen
 )
 
@@ -95,10 +96,10 @@ target_include_directories(g_ar_toolkit
 
 set_target_properties(g_ar_toolkit PROPERTIES
   POSITION_INDEPENDENT_CODE ON
-  C_VISIBILITY_PRESET hidden
-  CXX_VISIBILITY_PRESET hidden
-  VISIBILITY_INLINES_HIDDEN ON
-  WINDOWS_EXPORT_ALL_SYMBOLS OFF
+  C_VISIBILITY_PRESET default
+  CXX_VISIBILITY_PRESET default
+  VISIBILITY_INLINES_HIDDEN OFF
+  WINDOWS_EXPORT_ALL_SYMBOLS ON
 )
 
 # plaform specific definitions
@@ -135,8 +136,10 @@ generate_export_header(g_ar_toolkit)
 # Set the Library Filename to include the bitness
 math(EXPR BITNESS "8*${CMAKE_SIZEOF_VOID_P}")
 set_target_properties(g_ar_toolkit PROPERTIES OUTPUT_NAME gartoolkit_${BITNESS}-${g_ar_toolkit_shared_binary_VERSION_MAJOR})
-target_link_libraries(g_ar_toolkit PRIVATE
+target_link_libraries(g_ar_toolkit 
+  PUBLIC
   g_ar_toolkit_core
+  PRIVATE
   opencv_imgcodecs
 )
 
