--- a/shared-binary/g_ar_toolkit_dnn/CMakeLists.txt
+++ b/shared-binary/g_ar_toolkit_dnn/CMakeLists.txt
@@ -33,7 +33,7 @@ set_target_properties(g_ar_toolkit_dnn PROPERTIES
 math(EXPR BITNESS "8*${CMAKE_SIZEOF_VOID_P}")
 set_target_properties(g_ar_toolkit_dnn PROPERTIES OUTPUT_NAME gartoolkit_dnn_${BITNESS}-${g_ar_toolkit_shared_binary_VERSION_MAJOR})
 target_link_libraries(g_ar_toolkit_dnn PRIVATE
-  g_ar_toolkit_core
+  g_ar_toolkit
   opencv_objdetect
   opencv_wechat_qrcode
   opencv_dnn
