--- a/shared-binary/g_ar_toolkit_dnn/CMakeLists.txt
+++ b/shared-binary/g_ar_toolkit_dnn/CMakeLists.txt
@@ -43,4 +43,5 @@ target_sources(g_ar_toolkit_dnn PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}/src/dnn_barcode.cpp
     ${CMAKE_CURRENT_LIST_DIR}/src/dnn_we_chat_qr.cpp
     ${CMAKE_CURRENT_LIST_DIR}/src/dnn_text.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/dnn_model.cpp
 )
